hphp/test/zend/bad/bug42817.php
<?php
$a = clone(null);
array_push($a->b, $c);
?>